# ETERNO_RETORNO_COPY

./: .gitignore  Dockerfile_dagster  Dockerfile_user_code  README.md  dagster-docker.yaml  dagster.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  workspace-docker.yaml  workspace.yaml
.github/workflows/: ci.yml
eterno_retorno/: __init__.py  definitions.py
eterno_retorno/assets/analytics_logs/: __init__.py
eterno_retorno/assets/sling/: __init__.py  extractions.yaml  extractions2.yaml  slingassets.py
eterno_retorno/jobs/: runslogs.py  sling.py
eterno_retorno/resources/: slingConnection.py
